ch06/y.output
Grammar

    0 $accept: program $end

    1 program: exp

    2 exp: lvalue
    3    | NIL
    4    | LPAREN RPAREN
    5    | INT
    6    | STRING
    7    | MINUS exp
    8    | func_call
    9    | arith_exp
   10    | cmp_exp
   11    | bool_exp
   12    | record_create
   13    | array_create
   14    | lvalue ASSIGN exp
   15    | IF exp THEN exp ELSE exp
   16    | IF exp THEN exp
   17    | WHILE exp DO exp
   18    | FOR ID ASSIGN exp TO exp DO exp
   19    | BREAK
   20    | LET decs IN expseq END
   21    | LPAREN expseq RPAREN

   22 lvalue: ID
   23       | ID LBRACK exp RBRACK
   24       | lvalue LBRACK exp RBRACK
   25       | lvalue DOT ID

   26 func_call: ID LPAREN explist RPAREN

   27 explist: /* empty */
   28        | explist_nonempty

   29 explist_nonempty: exp
   30                 | exp COMMA explist_nonempty

   31 arith_exp: exp PLUS exp
   32          | exp MINUS exp
   33          | exp TIMES exp
   34          | exp DIVIDE exp

   35 cmp_exp: exp EQ exp
   36        | exp NEQ exp
   37        | exp LT exp
   38        | exp LE exp
   39        | exp GT exp
   40        | exp GE exp

   41 bool_exp: exp AND exp
   42         | exp OR exp

   43 record_create: ID LBRACE record_create_list RBRACE

   44 record_create_list: /* empty */
   45                   | record_create_list_nonempty

   46 record_create_list_nonempty: record_create_field
   47                            | record_create_field COMMA record_create_list_nonempty

   48 record_create_field: ID EQ exp

   49 array_create: ID LBRACK exp RBRACK OF exp

   50 decs: /* empty */
   51     | dec decs

   52 dec: tydeclist
   53    | vardec
   54    | fundeclist

   55 tydeclist: tydec
   56          | tydec tydeclist

   57 tydec: TYPE ID EQ ty

   58 ty: ID
   59   | LBRACE tyfields RBRACE
   60   | ARRAY OF ID

   61 tyfields: /* empty */
   62         | tyfields_nonempty

   63 tyfields_nonempty: tyfield
   64                  | tyfield COMMA tyfields_nonempty

   65 tyfield: ID COLON ID

   66 vardec: VAR ID ASSIGN exp
   67       | VAR ID COLON ID ASSIGN exp

   68 fundeclist: fundec
   69           | fundec fundeclist

   70 fundec: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   71       | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

   72 expseq: exp
   73       | exp SEMICOLON expseq


Terminals, with rules where they appear

$end (0) 0
error (256)
LOW (258)
FUNCTION (259) 70 71
TYPE (260) 57
ID (261) 18 22 23 25 26 43 48 49 57 58 60 65 66 67 70 71
LBRACK (262) 23 24 49
OF (263) 49 60
DO (264) 17 18
THEN (265) 15 16
ELSE (266) 15
SEMICOLON (267) 73
ASSIGN (268) 14 18 66 67
OR (269) 42
AND (270) 41
GE (271) 40
GT (272) 39
LE (273) 38
LT (274) 37
NEQ (275) 36
EQ (276) 35 48 57 70 71
MINUS (277) 7 32
PLUS (278) 31
DIVIDE (279) 34
TIMES (280) 33
UMINUS (281)
STRING (282) 6
INT (283) 5
COMMA (284) 30 47 64
COLON (285) 65 67 71
LPAREN (286) 4 21 26 70 71
RPAREN (287) 4 21 26 70 71
RBRACK (288) 23 24 49
LBRACE (289) 43 59
RBRACE (290) 43 59
DOT (291) 25
ARRAY (292) 60
IF (293) 15 16
WHILE (294) 17
FOR (295) 18
TO (296) 18
LET (297) 20
IN (298) 20
END (299) 20
BREAK (300) 19
NIL (301) 3
VAR (302) 66 67


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
exp (50)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21,
    on right: 1 7 14 15 16 17 18 23 24 29 30 31 32 33 34 35 36 37 38
    39 40 41 42 48 49 66 67 70 71 72 73
lvalue (51)
    on left: 22 23 24 25, on right: 2 14 24 25
func_call (52)
    on left: 26, on right: 8
explist (53)
    on left: 27 28, on right: 26
explist_nonempty (54)
    on left: 29 30, on right: 28 30
arith_exp (55)
    on left: 31 32 33 34, on right: 9
cmp_exp (56)
    on left: 35 36 37 38 39 40, on right: 10
bool_exp (57)
    on left: 41 42, on right: 11
record_create (58)
    on left: 43, on right: 12
record_create_list (59)
    on left: 44 45, on right: 43
record_create_list_nonempty (60)
    on left: 46 47, on right: 45 47
record_create_field (61)
    on left: 48, on right: 46 47
array_create (62)
    on left: 49, on right: 13
decs (63)
    on left: 50 51, on right: 20 51
dec (64)
    on left: 52 53 54, on right: 51
tydeclist (65)
    on left: 55 56, on right: 52 56
tydec (66)
    on left: 57, on right: 55 56
ty (67)
    on left: 58 59 60, on right: 57
tyfields (68)
    on left: 61 62, on right: 59 70 71
tyfields_nonempty (69)
    on left: 63 64, on right: 62 64
tyfield (70)
    on left: 65, on right: 63 64
vardec (71)
    on left: 66 67, on right: 53
fundeclist (72)
    on left: 68 69, on right: 54 69
fundec (73)
    on left: 70 71, on right: 68 69
expseq (74)
    on left: 72 73, on right: 20 21 73


state 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program        go to state 12
    exp            go to state 13
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 1

   22 lvalue: ID .
   23       | ID . LBRACK exp RBRACK
   26 func_call: ID . LPAREN explist RPAREN
   43 record_create: ID . LBRACE record_create_list RBRACE
   49 array_create: ID . LBRACK exp RBRACK OF exp

    LBRACK  shift, and go to state 21
    LPAREN  shift, and go to state 22
    LBRACE  shift, and go to state 23

    $default  reduce using rule 22 (lvalue)


state 2

    7 exp: MINUS . exp

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 24
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 3

    6 exp: STRING .

    $default  reduce using rule 6 (exp)


state 4

    5 exp: INT .

    $default  reduce using rule 5 (exp)


state 5

    4 exp: LPAREN . RPAREN
   21    | LPAREN . expseq RPAREN

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    RPAREN  shift, and go to state 25
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 26
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20
    expseq         go to state 27


state 6

   15 exp: IF . exp THEN exp ELSE exp
   16    | IF . exp THEN exp

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 28
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 7

   17 exp: WHILE . exp DO exp

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 29
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 8

   18 exp: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 30


state 9

   20 exp: LET . decs IN expseq END

    FUNCTION  shift, and go to state 31
    TYPE      shift, and go to state 32
    VAR       shift, and go to state 33

    $default  reduce using rule 50 (decs)

    decs        go to state 34
    dec         go to state 35
    tydeclist   go to state 36
    tydec       go to state 37
    vardec      go to state 38
    fundeclist  go to state 39
    fundec      go to state 40


state 10

   19 exp: BREAK .

    $default  reduce using rule 19 (exp)


state 11

    3 exp: NIL .

    $default  reduce using rule 3 (exp)


state 12

    0 $accept: program . $end

    $end  shift, and go to state 41


state 13

    1 program: exp .
   31 arith_exp: exp . PLUS exp
   32          | exp . MINUS exp
   33          | exp . TIMES exp
   34          | exp . DIVIDE exp
   35 cmp_exp: exp . EQ exp
   36        | exp . NEQ exp
   37        | exp . LT exp
   38        | exp . LE exp
   39        | exp . GT exp
   40        | exp . GE exp
   41 bool_exp: exp . AND exp
   42         | exp . OR exp

    OR      shift, and go to state 42
    AND     shift, and go to state 43
    GE      shift, and go to state 44
    GT      shift, and go to state 45
    LE      shift, and go to state 46
    LT      shift, and go to state 47
    NEQ     shift, and go to state 48
    EQ      shift, and go to state 49
    MINUS   shift, and go to state 50
    PLUS    shift, and go to state 51
    DIVIDE  shift, and go to state 52
    TIMES   shift, and go to state 53

    $default  reduce using rule 1 (program)


state 14

    2 exp: lvalue .
   14    | lvalue . ASSIGN exp
   24 lvalue: lvalue . LBRACK exp RBRACK
   25       | lvalue . DOT ID

    LBRACK  shift, and go to state 54
    ASSIGN  shift, and go to state 55
    DOT     shift, and go to state 56

    $default  reduce using rule 2 (exp)


state 15

    8 exp: func_call .

    $default  reduce using rule 8 (exp)


state 16

    9 exp: arith_exp .

    $default  reduce using rule 9 (exp)


state 17

   10 exp: cmp_exp .

    $default  reduce using rule 10 (exp)


state 18

   11 exp: bool_exp .

    $default  reduce using rule 11 (exp)


state 19

   12 exp: record_create .

    $default  reduce using rule 12 (exp)


state 20

   13 exp: array_create .

    $default  reduce using rule 13 (exp)


state 21

   23 lvalue: ID LBRACK . exp RBRACK
   49 array_create: ID LBRACK . exp RBRACK OF exp

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 57
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 22

   26 func_call: ID LPAREN . explist RPAREN

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 27 (explist)

    exp               go to state 58
    lvalue            go to state 14
    func_call         go to state 15
    explist           go to state 59
    explist_nonempty  go to state 60
    arith_exp         go to state 16
    cmp_exp           go to state 17
    bool_exp          go to state 18
    record_create     go to state 19
    array_create      go to state 20


state 23

   43 record_create: ID LBRACE . record_create_list RBRACE

    ID  shift, and go to state 61

    $default  reduce using rule 44 (record_create_list)

    record_create_list           go to state 62
    record_create_list_nonempty  go to state 63
    record_create_field          go to state 64


state 24

    7 exp: MINUS exp .
   31 arith_exp: exp . PLUS exp
   32          | exp . MINUS exp
   33          | exp . TIMES exp
   34          | exp . DIVIDE exp
   35 cmp_exp: exp . EQ exp
   36        | exp . NEQ exp
   37        | exp . LT exp
   38        | exp . LE exp
   39        | exp . GT exp
   40        | exp . GE exp
   41 bool_exp: exp . AND exp
   42         | exp . OR exp

    $default  reduce using rule 7 (exp)


state 25

    4 exp: LPAREN RPAREN .

    $default  reduce using rule 4 (exp)


state 26

   31 arith_exp: exp . PLUS exp
   32          | exp . MINUS exp
   33          | exp . TIMES exp
   34          | exp . DIVIDE exp
   35 cmp_exp: exp . EQ exp
   36        | exp . NEQ exp
   37        | exp . LT exp
   38        | exp . LE exp
   39        | exp . GT exp
   40        | exp . GE exp
   41 bool_exp: exp . AND exp
   42         | exp . OR exp
   72 expseq: exp .
   73       | exp . SEMICOLON expseq

    SEMICOLON  shift, and go to state 65
    OR         shift, and go to state 42
    AND        shift, and go to state 43
    GE         shift, and go to state 44
    GT         shift, and go to state 45
    LE         shift, and go to state 46
    LT         shift, and go to state 47
    NEQ        shift, and go to state 48
    EQ         shift, and go to state 49
    MINUS      shift, and go to state 50
    PLUS       shift, and go to state 51
    DIVIDE     shift, and go to state 52
    TIMES      shift, and go to state 53

    $default  reduce using rule 72 (expseq)


state 27

   21 exp: LPAREN expseq . RPAREN

    RPAREN  shift, and go to state 66


state 28

   15 exp: IF exp . THEN exp ELSE exp
   16    | IF exp . THEN exp
   31 arith_exp: exp . PLUS exp
   32          | exp . MINUS exp
   33          | exp . TIMES exp
   34          | exp . DIVIDE exp
   35 cmp_exp: exp . EQ exp
   36        | exp . NEQ exp
   37        | exp . LT exp
   38        | exp . LE exp
   39        | exp . GT exp
   40        | exp . GE exp
   41 bool_exp: exp . AND exp
   42         | exp . OR exp

    THEN    shift, and go to state 67
    OR      shift, and go to state 42
    AND     shift, and go to state 43
    GE      shift, and go to state 44
    GT      shift, and go to state 45
    LE      shift, and go to state 46
    LT      shift, and go to state 47
    NEQ     shift, and go to state 48
    EQ      shift, and go to state 49
    MINUS   shift, and go to state 50
    PLUS    shift, and go to state 51
    DIVIDE  shift, and go to state 52
    TIMES   shift, and go to state 53


state 29

   17 exp: WHILE exp . DO exp
   31 arith_exp: exp . PLUS exp
   32          | exp . MINUS exp
   33          | exp . TIMES exp
   34          | exp . DIVIDE exp
   35 cmp_exp: exp . EQ exp
   36        | exp . NEQ exp
   37        | exp . LT exp
   38        | exp . LE exp
   39        | exp . GT exp
   40        | exp . GE exp
   41 bool_exp: exp . AND exp
   42         | exp . OR exp

    DO      shift, and go to state 68
    OR      shift, and go to state 42
    AND     shift, and go to state 43
    GE      shift, and go to state 44
    GT      shift, and go to state 45
    LE      shift, and go to state 46
    LT      shift, and go to state 47
    NEQ     shift, and go to state 48
    EQ      shift, and go to state 49
    MINUS   shift, and go to state 50
    PLUS    shift, and go to state 51
    DIVIDE  shift, and go to state 52
    TIMES   shift, and go to state 53


state 30

   18 exp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 69


state 31

   70 fundec: FUNCTION . ID LPAREN tyfields RPAREN EQ exp
   71       | FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ exp

    ID  shift, and go to state 70


state 32

   57 tydec: TYPE . ID EQ ty

    ID  shift, and go to state 71


state 33

   66 vardec: VAR . ID ASSIGN exp
   67       | VAR . ID COLON ID ASSIGN exp

    ID  shift, and go to state 72


state 34

   20 exp: LET decs . IN expseq END

    IN  shift, and go to state 73


state 35

   51 decs: dec . decs

    FUNCTION  shift, and go to state 31
    TYPE      shift, and go to state 32
    VAR       shift, and go to state 33

    $default  reduce using rule 50 (decs)

    decs        go to state 74
    dec         go to state 35
    tydeclist   go to state 36
    tydec       go to state 37
    vardec      go to state 38
    fundeclist  go to state 39
    fundec      go to state 40


state 36

   52 dec: tydeclist .

    $default  reduce using rule 52 (dec)


state 37

   55 tydeclist: tydec .
   56          | tydec . tydeclist

    TYPE  shift, and go to state 32

    $default  reduce using rule 55 (tydeclist)

    tydeclist  go to state 75
    tydec      go to state 37


state 38

   53 dec: vardec .

    $default  reduce using rule 53 (dec)


state 39

   54 dec: fundeclist .

    $default  reduce using rule 54 (dec)


state 40

   68 fundeclist: fundec .
   69           | fundec . fundeclist

    FUNCTION  shift, and go to state 31

    $default  reduce using rule 68 (fundeclist)

    fundeclist  go to state 76
    fundec      go to state 40


state 41

    0 $accept: program $end .

    $default  accept


state 42

   42 bool_exp: exp OR . exp

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 77
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 43

   41 bool_exp: exp AND . exp

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 78
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 44

   40 cmp_exp: exp GE . exp

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 79
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 45

   39 cmp_exp: exp GT . exp

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 80
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 46

   38 cmp_exp: exp LE . exp

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 81
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 47

   37 cmp_exp: exp LT . exp

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 82
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 48

   36 cmp_exp: exp NEQ . exp

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 83
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 49

   35 cmp_exp: exp EQ . exp

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 84
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 50

   32 arith_exp: exp MINUS . exp

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 85
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 51

   31 arith_exp: exp PLUS . exp

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 86
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 52

   34 arith_exp: exp DIVIDE . exp

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 87
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 53

   33 arith_exp: exp TIMES . exp

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 88
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 54

   24 lvalue: lvalue LBRACK . exp RBRACK

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 89
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 55

   14 exp: lvalue ASSIGN . exp

    ID      shift, and go to state 1
    MINUS   shift, and go to state 2
    STRING  shift, and go to state 3
    INT     shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp            go to state 90
    lvalue         go to state 14
    func_call      go to state 15
    arith_exp      go to state 16
    cmp_exp        go to state 17
    bool_exp       go to state 18
    record_create  go to state 19
    array_create   go to state 20


state 56

   25 lvalue: lvalue DOT . ID

    ID  shift, and go to state 91


state 57

   23 lvalue: ID LBRACK exp . RBRACK
   31 arith_exp: exp . PLUS exp
   32          | exp . MINUS exp
   33          | exp . TIMES exp
   34          | exp . DIVIDE exp
   35 cmp_exp: exp . EQ exp
   36        | exp . NEQ exp
   37        | exp . LT exp
   38        | exp . LE exp
   39        | exp . GT exp
   40        | exp . GE exp
   41 bool_exp: exp . AND exp
   42         | exp . OR exp
   49 array_create: ID LBRACK exp . RBRACK OF exp

    OR      shift, and go to state 42
    AND     shift, and go to state 43
    GE      shift, and go to state 44
    GT      shift, and go to state 45
    LE      shift, and go to state 46
    LT      shift, and go to state 47
    NEQ     shift, and go to state 48
    EQ      shift, and go to state 49
    MINUS   shift, and go to state 50
    PLUS    shift, and go to state 51
    DIVIDE  shift, and go to state 52
    TIMES   shift, and go to state 53
    RBRACK  shift, and go to state 92


state 58

   29 explist_nonempty: exp .
   30                 | exp . COMMA explist_nonempty
   31 arith_exp: exp . PLUS exp
   32          | exp . MINUS exp
   33          | exp . TIMES exp
   34          | exp . DIVIDE exp
   35 cmp_exp: exp . EQ exp
   36        | exp . NEQ exp
   37        | exp . LT exp
   38        | exp . LE exp
   39        | exp . GT exp
   40        | exp . GE exp
   41 bool_exp: exp . AND exp
   42         | exp . OR exp

    OR      shift, and go to state 42
    AND     shift, and go to state 43
    GE      shift, and go to state 44
    GT      shift, and go to state 45
    LE      shift, and go to state 46
    LT      shift, and go to state 47
    NEQ     shift, and go to state 48
    EQ      shift, and go to state 49
    MINUS   shift, and go to state 50
    PLUS    shift, and go to state 51
    DIVIDE  shift, and go to state 52
    TIMES   shift, and go to state 53
    COMMA   shift, and go to state 93

    $default  reduce using rule 29 (explist_nonempty)


state 59

   26 func_call: ID LPAREN explist . RPAREN

    RPAREN  shift, and go to state 94


state 60

   28 explist: explist_nonempty .

    $default  reduce using rule 28 (explist)


state 61

   48 record_create_field: ID . EQ exp

    EQ  shift, and go to state 95


state 62
